# BetArena

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  LICENSE  Makefile  PWA_BUILD_TROUBLESHOOTING.md  README.md  build.sh  docker-compose.prod.yml  docker-compose.yaml  generate_icons.py  setup-ec2.sh
.github/workflows/: ci.yml  deploy-aws.yml
apps/backend/: Dockerfile  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 51ed96ed461c_initial_migration_leagues_teams_events_.py
apps/backend/app/: main.py
apps/backend/app/core/: db.py  settings.py
apps/backend/app/models/: base.py  event.py  league.py  result.py  team.py
apps/backend/scripts/: __init__.py  seed.py
apps/backend/tests/: test_main.py
apps/web/: Dockerfile  PWA_SETUP_GUIDE.md  next.config.js  package-lock.json  package.json
apps/web/pages/: _app.tsx  index.tsx  offline.tsx
apps/web/pages/api/: healthz.ts
apps/web/public/: manifest.json  offline.html  service-worker.js  sw.js.map
apps/web/styles/: Home.module.css  globals.css
